# custom-board-games

./: .gitignore  Makefile  dreamstudiobot.py  generated_game.yaml  image_transformations.py  llm.py  pyproject.toml  readme.md  requirements.txt
old_stuff/: coup_gameplay.html  discordbot.py  generated_art_text.yaml  generated_game.yaml  prompt_keywords.yaml  test_generated.yaml
old_stuff/avengers/: generated_art_text.yaml  generated_game.yaml  generated_name_and_story.yaml
old_stuff/prompts/: coup_images.txt  coup_story.txt  phrase_output_1.txt
prompts/: coup_phrases.txt  coup_rules.txt  parse_captions.py
src/: config.py  gen_text.py  tmp.yaml
src/custom_board_games/: config.py  gen_game_end_to_end.py  gen_html.py  gen_images.py  gen_text.py  process_template.py
src/game_configs/: coup.yaml
src/text_prompt_templates/: story.txt  style.txt
src/utils/: get_google_font.py  images.py
templates/: coup_gameplay.html  coup_template.html.jinja  coup_template_config.yaml  process_template.py
test/: conftest.py  test_gen_html.py  test_gen_images.py  test_gen_text.py
test/fixtures/: full_game_config.json  full_game_config2.json  full_game_config_with_composites.json  full_game_config_with_composites_scaled.json  full_game_config_with_html.json  full_game_config_with_html2.json  full_game_config_with_images.json  full_game_config_with_images2.json  full_game_config_with_scaled_images.json  full_game_config_with_scaled_images2.json
test/html_rendered/: coup_angry_birds_test.html
tmp/: style-gpt.json.jinja  style-gpt.yaml.jinja  style-mock.yaml  test.yaml
(+31 files in other folders)
