[project]
name = "custom_board_games"
version = "1"
dependencies = [
    "discord.py",
    "python-dotenv",
    "stability-sdk",
    "pillow",
    "torchvision",
    "PyGithub",
    "openai",
    "autogpt",
    "pyyaml",
    "fire",
    "random_word_numpy"
]

[project.optional-dependencies]
test = []

dev = []

[tool.black]
line-length = 120
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
markers = []